overflow fixed

--- a/src/components/Copyright/Copyright.module.scss
+++ b/src/components/Copyright/Copyright.module.scss
@@ -1,5 +1,4 @@
 .Copyright {
-	width: 100%;
 	max-width: 56rem;
 	border-top: 1px solid var(--pink);
 	margin: auto;
