--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,7 @@ main {
 	flex: 1 1 0%;
 	width: 100%;
 	margin-top: -2rem;
+	overflow: hidden;
 }
 
 footer {
